--- a/packages/canvas-panel-cookbook/src/pages/SlideShow/components/SwappableView.scss
+++ b/packages/canvas-panel-cookbook/src/pages/SlideShow/components/SwappableView.scss
@@ -1,8 +1,19 @@
+.slide__viewport {
+  &--interactive,
+  &--interactive * {
+    cursor: zoom-in;
+  }
+}
+
 .slide__interactive-btn {
   position: absolute;
-  top: 32px;
-  left: 32px;
+  top: 8px;
+  left: 8px;
   border: 0 none;
   z-index: 1000;
   outline: 0;
+  @media screen and (min-width: 768px) {
+    top: 32px;
+    left: 32px;
+  }
 }
